force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/SVMXA360__ContractLineItemPlan__c.object-meta.xml
<CustomObject>
    <description>Stores templated product/product family information for the purpose of creating Contract Line Items and associating applicable Assets to a Service Contract via the Contract Plan.</description>
    <label>Applicable Contract Line Product</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Contract Line Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>