force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__ContractLineDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineDuration__c</fullName>
    <description>The duration of the plan, in numbers.</description>
    <label>Contract Line Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>