force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__ContractLineUnitOfTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineUnitOfTime__c</fullName>
    <description>The duration of the plan, in units.</description>
    <label>Contract Line Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>