force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__Discount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Discount__c</fullName>
    <description>The discount % to be applied to Contract Line Item records while authoring.</description>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>