force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>The product family of the CLI Plan. The picklist values should align with the &apos;Product Family&apos; field on the Product object.  When a Service Contract is created using the SCON Plan, this product family retrieves the Assets linked to the source record to create Contract Line Items on the SCON.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__ProductFamily</valueSetName>
    </valueSet>
</CustomField>