force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product that would be used to author the Contract Line. When a Service Contract is created using the SCON Plan, this product retrieves the Assets linked to the source record to create Contract Line Items on the SCON.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Applicable Contract Line Products</relationshipLabel>
    <relationshipName>Contract_Line_Item_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>