force-app/main/default/objects/SVMXA360__ContractLineItemPlan__c/fields/SVMXA360__ServiceContractPlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractPlanId__c</fullName>
    <description>The master-detail relationship to Service Contract Plan.</description>
    <label>Service Contract Plan</label>
    <referenceTo>SVMXA360__ServiceContractPlan__c</referenceTo>
    <relationshipLabel>Applicable Contract Line Products</relationshipLabel>
    <relationshipName>Contract_Line_Item_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>